Bug 1154213 - Handle timestamps of video/webm vorbis track encoding. r=mreavy, r=rjesup